--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Ignore bundler config.
 /.bundle
 /node_modules
+npm-debug.log
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
@@ -16,3 +17,7 @@
 /log/*
 !/log/.keep
 /tmp
+
+# Ignore other unnecessary files.
+.DS_Store
+public/assets/javascripts/boot.js
